Modelos de usuarios

--- a/default.html
+++ b/default.html
@@ -30,6 +30,7 @@
                     <md-button class="md-raised" href="#/servicios">Servicios</md-button>
                     <md-button class="md-raised" href="#/paquetes">Paquetes</md-button>
                     <md-button class="md-raised" href="#/registro">Bitacoras</md-button>
+                    <md-button class="md-raised" href="#/registro">Usuarios</md-button>
                 </md-nav-bar>
             </md-content>
         </div>
