--- a/public/webroot/admin_servicios/servicios.html
+++ b/public/webroot/admin_servicios/servicios.html
@@ -22,7 +22,7 @@
                     </md-table-cell>
                     <md-table-cell>{{servicio.nombre}}</md-table-cell>
                     <md-table-cell>{{servicio.descripcion}}</md-table-cell>
-                    <md-table-cell class="short-column">{{servicio.precio}}</md-table-cell>
+                    <md-table-cell class="short-column">$ {{servicio.precio}}</md-table-cell>
                     <md-table-cell class="short-column">
                         <md-button class="md-icon-button" aria-label="Editar" ng-click="vm.modal_servicio($event, servicio)">
                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
