Borrado de paquetes

--- a/public/webroot/admin_paquetes/paquetes.html
+++ b/public/webroot/admin_paquetes/paquetes.html
@@ -22,10 +22,10 @@
                     </md-table-cell>
                     <md-table-cell class="short-column">$ {{paquete.precio}}</md-table-cell>
                     <md-table-cell class="short-column">
-                        <md-button class="md-icon-button" aria-label="Editar" ng-click="vm.modal_servicio($event, servicio)">
+                        <md-button class="md-icon-button" aria-label="Editar" ng-click="vm.modal_paquetes($event, paquete)">
                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                         </md-button>
-                        <md-button class="md-icon-button" aria-label="Borrar" ng-click="vm.borrar_servicio($event, servicio)">
+                        <md-button class="md-icon-button" aria-label="Borrar" ng-click="vm.borrar_paquete($event, paquete)">
                             <i class="fa fa-minus-circle" aria-hidden="true"></i>
                         </md-button>
                     </md-table-cell>
