--- a/default.html
+++ b/default.html
@@ -7,6 +7,8 @@
         <script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-messages/angular-messages.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-material/angular-material.min.js"></script>
+        <script type="text/javascript" src="bower_components/highcharts/highcharts.js"></script>
+        <script type="text/javascript" src="bower_components/highcharts-ng/dist/highcharts-ng.min.js"></script>
         
         <!--Modulos de angular-->
         <script type="text/javascript" src="webroot/app.js"></script>
@@ -17,6 +19,7 @@
 <!--        <style type="text/css" src="bower_components/angular-material/angular-material.min.css"></style>-->
         <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
         <link rel="stylesheet" href="css/material-table.css">
+        <link rel="stylesheet" href="css/panel.css">
         <link rel="stylesheet" href="css/font-awesome.css">
         <!--Fonts-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
