--- a/default.html
+++ b/default.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src="webroot/dashboard/dashboard.controller.js"></script>
         <script type="text/javascript" src="webroot/admin_paquetes/paquetes.controller.js"></script>
         <script type="text/javascript" src="webroot/admin_servicios/servicios.controller.js"></script>
+        <script type="text/javascript" src="webroot/usuarios/usuarios.controller.js"></script>
         <!--CSS-->
 <!--        <style type="text/css" src="bower_components/angular-material/angular-material.min.css"></style>-->
         <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
