id de openpay en la autenticacion y creacion de usuario

--- a/public/webroot/dashboard/dashboard.html
+++ b/public/webroot/dashboard/dashboard.html
@@ -46,7 +46,8 @@
                         <!--Totales-->
                         <md-table-row class="result-row">
                             <md-table-cell></md-table-cell>
-                            <md-table-cell class="short-column">Total: $</md-table-cell>
+                            <md-table-cell class="short-column">Total </md-table-cell>
+                            <md-table-cell class="short-column">$</md-table-cell>
                         </md-table-row>
                     </md-table-data>
                 </md-table>
@@ -68,6 +69,12 @@
                             <md-table-cell>Activo</md-table-cell>
                             <md-table-cell class="short-column">Activo</md-table-cell>
                             <md-table-cell class="short-column">Activo</md-table-cell>
+                        </md-table-row>
+                        <!--Totales-->
+                        <md-table-row class="result-row">
+                            <md-table-cell></md-table-cell>
+                            <md-table-cell class="short-column">Total: </md-table-cell>
+                            <md-table-cell class="short-column">$</md-table-cell>
                         </md-table-row>
                     </md-table-data>
                 </md-table>
