Registro de ventas

--- a/public/webroot/usuarios/usuarios.html
+++ b/public/webroot/usuarios/usuarios.html
@@ -20,7 +20,7 @@
                     </md-table-cell>
                     <md-table-cell>{{usuario.created | date:'medium'}}</md-table-cell>
                     <md-table-cell class="short-column">
-                        <md-button class="md-icon-button" aria-label="Borrar" ng-click="vm.borrar_usuario($event, usuario['_id'])">
+                        <md-button class="md-icon-button" aria-label="Borrar" ng-click="vm.borrar_usuario($event, usuario['_id'], usuario.id_openpay)">
                             <i class="fa fa-minus-circle" aria-hidden="true"></i>
                         </md-button>
                     </md-table-cell>
