Modulo de registros panel

--- a/default.html
+++ b/default.html
@@ -16,6 +16,7 @@
         <script type="text/javascript" src="webroot/dashboard/dashboard.controller.js"></script>
         <script type="text/javascript" src="webroot/admin_paquetes/paquetes.controller.js"></script>
         <script type="text/javascript" src="webroot/admin_servicios/servicios.controller.js"></script>
+        <script type="text/javascript" src="webroot/registros/registros.controller.js"></script>
         <script type="text/javascript" src="webroot/usuarios/usuarios.controller.js"></script>
         <!--CSS-->
 <!--        <style type="text/css" src="bower_components/angular-material/angular-material.min.css"></style>-->
