Confirmacion y cancelacion de ventas

--- a/default.html
+++ b/default.html
@@ -35,7 +35,7 @@
                     <md-button class="md-raised" href="#/">Dashboard</md-button>
                     <md-button class="md-raised" href="#/servicios">Servicios</md-button>
                     <md-button class="md-raised" href="#/paquetes">Paquetes</md-button>
-                    <md-button class="md-raised" href="#/registro">Bitacoras</md-button>
+                    <md-button class="md-raised" href="#/registro">Ventas</md-button>
                     <md-button class="md-raised" href="#/usuarios">Usuarios</md-button>
                 </md-nav-bar>
             </md-content>
