Correccion al dashboard

--- a/public/webroot/registros/registros.html
+++ b/public/webroot/registros/registros.html
@@ -34,7 +34,7 @@
                                     <md-button class="md-icon-button" aria-label="Confirmar" ng-click="vm.confirmar_venta($event, venta, 'confirm')">
                                         <i class="fa fa-check-circle" aria-hidden="true"></i>
                                     </md-button>
-                                    <md-button class="md-icon-button" aria-label="Cancelar" ng-click="vm.cancelar_venta($event, venta, 'cancel')">
+                                    <md-button class="md-icon-button" aria-label="Cancelar" ng-click="vm.confirmar_venta($event, venta, 'cancel')">
                                         <i class="fa fa-minus-circle" aria-hidden="true"></i>
                                     </md-button>
                                 </md-table-cell>
