--- a/public/webroot/dashboard/dashboard.html
+++ b/public/webroot/dashboard/dashboard.html
@@ -23,6 +23,16 @@
             </md-input-container>
             <h1>Panel administrador</h1>
         </div>
+        <fieldset class="standard" >
+            <legend>Aviso</legend>
+            <div layout="row">
+                <div><i class="fa fa-exclamation-circle fa-5x" aria-hidden="true" style="color: orange;"></i></div>
+                <div flex>
+                    <span>XX Ventas se encuentran pendientes de validar</span>
+                    <md-button>Ver mas <i class="fa fa-chevron-right" aria-hidden="true"></i></md-button>
+                </div>
+            </div>    
+        </fieldset>
         <div layout="row" style="margin-bottom: 64px;">
             <div flex="50">
                 <div class="title-header">
