--- a/public/webroot/registros/submodules/form_registro.html
+++ b/public/webroot/registros/submodules/form_registro.html
@@ -12,7 +12,7 @@
                         zoom='map.zoom'>
                     <ui-gmap-marker
                                     idkey="venta['_id']" 
-                                    coords='venta.direccion'
+                                    coords='cordinates'
                                    >
                     </ui-gmap-marker>
                 </ui-gmap-google-map>
